EKS/2024-03-24(Park)/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
  labels:
    app: go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - args:
        - name: go
          image: 950274644703.dkr.ecr.ap-northeast-2.amazonaws.com/skills-ecr:test 
          resources:
            requests:  # hpa 위해 설정
              memory: 64Mi 
              cpu: 250m
            limits: 
              memory: 128Mi
              cpu:  500m # hpa 위해 설정
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      serviceAccountName: secret-role
